removed linked in button
wasn't working properly and is unnecessary

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: bartljak
   instagram:
-  linkedin: jacob-bartles
+  linkedin: 
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
